--- a/index.HTML
+++ b/index.HTML
@@ -15,7 +15,18 @@
 <body>
     <section id="main">
         <div class="main-block">
-
+            <img src="img/maskot.png" alt="" width="125">
+            <div class="main-content">
+                <h1 class="main-title">
+                    АРСЕНИЙ ЛИННИК
+                </h1>
+                <p class="main-subtitle">
+                    личная страничка разработчика
+                </p>
+            </div>
+            <div class="button">
+                <a href="#">подробнее</a>
+            </div>
         </div>
     </section>
     <section id="about">
