--- a/index.HTML
+++ b/index.HTML
@@ -28,10 +28,33 @@
                 <a href="#">подробнее</a>
             </div>
         </div>
+        <div class="moving-planet">
+            <img src="img/moving-planet.png" alt="">
+        </div>
     </section>
     <section id="about">
+        <h1 class="title">ОБО МНЕ</h1>
         <div class="about-block">
-
+            <div class="about-content">
+                <div class="about-text">
+                    <p class="about-title">
+                        Меня зовут Арсений.
+                        я занемаюсь разработкой современих
+                        сайтов и игрой на скрипке<br><br>
+                        Мне нравится создавать интересные и 
+                        современные проекты. 
+                    </p>
+                    <div class="button">
+                        <a href="#">Мои навыки</a>
+                    </div>
+                </div>
+                <div class="about-card">
+                    <img src="img/photo.png" alt="">
+                    <p>Где живу: Швеция</p>
+                    <p>Возраст: 14</p>
+                    <p>Дата рождения: 2010</p>
+                </div>
+            </div>
         </div>
     </section>
     <section id="skills">
