--- a/index.HTML
+++ b/index.HTML
@@ -23,6 +23,18 @@
                 <a href="#works" class="nav-link works-link">РАБОТЫ</a>
                 <a href="#comments" class="nav-link comments-link">ОТЗЫВЫ</a>
             </div>
+            <div class="mobile-button">
+                <img src="img/mobile_menu.png" width="40">
+            </div>
+            <div class="mobile_menu hide">
+                <div class="mobile-nav">
+                    <a href="#main" class="nav-link main-link ">ГЛАВНАЯ</a>
+                    <a href="#about" class="nav-link about-link">ОБО МНЕ</a>
+                    <a href="#skills" class="nav-link skills-link">НАВЫКИ</a>
+                    <a href="#works" class="nav-link works-link">РАБОТЫ</a>
+                    <a href="#comments" class="nav-link comments-link">ОТЗЫВЫ</a>
+                </div>
+            </div>
         </div>
     </nav>
     <section id="main">
