--- a/index.HTML
+++ b/index.HTML
@@ -49,7 +49,7 @@
                 </p>
             </div>
             <div class="button">
-                <a href="#about">подробнее</a>
+                <a href="#">подробнее</a>
             </div>
         </div>
         <div class="moving-planet">
@@ -76,7 +76,7 @@
                     <img src="img/photo.png" alt="">
                     <p>Где живу: Швеция</p>
                     <p>Возраст: 14</p>
-                    <p>Дата рождения: 2010/03/24</p>
+                    <p>Дата рождения: 2010</p>
                 </div>
             </div>
         </div>
@@ -145,7 +145,7 @@
     </section>
     <footer>
         <div class="footer-info">
-            <p>АРСЕНИЙ ЛИННИК</p>
+            <p>ДИАНА КОРНИГОР</p>
             <p>Личный сайт веб разработчика</p>
         </div>
         <div class="footer-year">
